# IO-Thyr.github.io

./: .gitignore  Makefile  README.md  _quarto.yml  about.qmd  index.qmd  posts.qmd  styles.css
_site/: about.html  home.html  index.html  listings.json  posts.html  (+1 more)
posts/: pyproject.toml
posts/2024-11-10-terra-lander.qmd/: index.qmd
posts/2024-27-12-distribution-divergence/: index.qmd
posts/2024-27-12-distribution-divergence/.jupyter_cache/: global.db
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/01eed2d9fc3078d11324764bfba02eb3/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/04198f9a5d5c997c4b77c80bb184f850/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/081330936ec5a9951b063314446553bb/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/0d0ec1c17420bca9c2dd1d932d4bb72f/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/1234059746948eae09c44b5ebe864a32/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/1c06998ffd7079c3008da7415906b855/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/1f5ca4dedfebf9f06c44b215f42c9f72/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/200b46e66b6131da8617e54e7b2158bd/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/20fa6723b4149128be7508c7b426e6eb/: base.ipynb
posts/2024-27-12-distribution-divergence/.jupyter_cache/executed/2163f782d91bc3487a2f130bf2fa61b0/: base.ipynb
(+57 files in other folders)
